--- a/index.html
+++ b/index.html
@@ -2,35 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   <script src="app.js" defer></script>
   <title>Frontend Mentor | Advice generator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <!--style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style-->
 </head>
 <body>
   <div class="container">
     <p class="accent">Advice #<span id="id"></span></p>
-    <!--Advice ID here-->
-    <blockquote class="advice" id="advice"></blockquote>
-    <!-- Advice text goes here -->
-    <img src="images/pattern-divider-mobile.svg" alt="divider icon">
-    <button class="btn"><img src="images/icon-dice.svg"/></button>
+    <blockquote><figcaption class="advice" id="advice"></figcaption></blockquote>
+    <div class="divider"><img src="./images/pattern-divider-desktop.svg"/></div>
+    <button class="btn"><img src="./images/icon-dice.svg"/></button>
   </div>
-  
-
-
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/jmzager0110">Miniature Jay-Z</a>
+    <a href="https://github.com/jmzager0110/advice-generator-app-main">Check it out on GitHub</a>
+    <a href="https://codepen.io/jmzager0110/pen/wvybzJv">or on CodePen.</a>.
   </div>
 </body>
 </html>
