--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <p class="accent">Advice #<span id="id"></span></p>
     <blockquote><figcaption class="advice" id="advice"></figcaption></blockquote>
-    <div class="divider"><img src="./images/pattern-divider-desktop.svg"/></div>
+    <img class="divider" src="./images/pattern-divider-desktop.svg"/>
     <button class="btn"><img src="./images/icon-dice.svg"/></button>
   </div>
   <div class="attribution">
