Desktop is nice!

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/jmzager0110">Miniature Jay-Z</a>
-    <a href="https://github.com/jmzager0110/advice-generator-app-main">Check it out on GitHub</a>
-    <a href="https://codepen.io/jmzager0110/pen/wvybzJv">or on CodePen.</a>.
+    <p>Check it out on<a href="https://github.com/jmzager0110/advice-generator-app-main">GitHub</a>or on <a href="https://codepen.io/jmzager0110/pen/wvybzJv">CodePen</a>.</p>
   </div>
 </body>
 </html>
